refactor: 统一数组系统调用使用SnowArrayObject与Value类型
- 所有数组相关系统调用（清空、取值、插入、长度、弹出、追加、删除、调整大小、赋值）改用SnowArrayObject处理
- 栈操作由直接Object转换改为操作Value类型，并通过RefValue获取堆中数组对象
- 统一堆引用校验，增强类型安全性和异常处理
- 兼容旧有接口，去除多余的List和数组反射处理逻辑
- 数组操作接口改为使用Value参数，统一调用约定
- AssignmentHandler中选择字节型索引设置函数修正为__struct_setindex_b

refactor(parser): 统一Token访问方法调用

- 所有Token类型访问调整为调用type()、line()、col()等方法代替旧的getType()、getLine()、getCol()

refactor(vm): 字节型运算指令统一使用NumberUtils.popByte辅助方法

- B2D/B2F/B2I/B2L/B2S系列类型转换指令改用NumberUtils.popByte弹出字节型数据
- BAdd、BAnd、BCE、BCG、BCGE、BCL、BCLE、BCNE、BDiv等字节型算术和比较指令统一调用NumberUtils.popByte替代直接类型转换
- 提高字节型操作的安全性和代码复用，增强异常及边界检查能力